gg-infra/k8s/hello-world/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: gg-hello-world
  namespace: gg-hello-world
  labels:
    app: gg-hello-world
spec:
  selector:
    app: gg-hello-world
  ports:
    - name: http
      port: 80
      targetPort: 8080
  type: ClusterIP
